--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
-  "author": "Ankit Kumar",
+  "author": "Vidit Bansal",
   "license": "ISC",
   "dependencies": {
     "connect-flash": "^0.1.1",
